force-app/main/default/objects/Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Area__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Open Day</fullName>
            </value>
            <value>
                <fullName>Virtual Helpdesk</fullName>
            </value>
            <value>
                <fullName>In Conversation With</fullName>
            </value>
            <value>
                <fullName>Applicant Experience Day</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Partner Event</fullName>
            </value>
            <value>
                <fullName>Graduation Event</fullName>
            </value>
            <value>
                <fullName>PG Student Event</fullName>
            </value>
            <value>
                <fullName>Alumni Networking</fullName>
            </value>
            <value>
                <fullName>Alumni Dinner</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>