force-app/main/default/objects/Event__c/fields/Event_Vendor_Account__c.field-meta.xml
<CustomField>
    <fullName>Event_Vendor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Primary Account for this Event (e.g. School/College / Faculty / University / etc.)</description>
    <inlineHelpText>Please provide the Primary Account for this Event (e.g. School/College / Faculty / University / etc.)</inlineHelpText>
    <label>Primary Event Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>