force-app/main/default/objects/Event__c/fields/Event_Venue_Capacity_Warning_On__c.field-meta.xml
<CustomField>
    <fullName>Event_Venue_Capacity_Warning_On__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Venue Capacity Warning On</label>
    <type>Checkbox</type>
</CustomField>