force-app/main/default/objects/Event__c/fields/Event_Vision__c.field-meta.xml
<CustomField>
    <fullName>Event_Vision__c</fullName>
    <label>Event Summary</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>