force-app/main/default/objects/Event__c/fields/Event_Waiting_List__c.field-meta.xml
<CustomField>
    <fullName>Event_Waiting_List__c</fullName>
    <label>Event Waiting List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>