force-app/main/default/objects/Event__c/fields/Event_Worthwhile__c.field-meta.xml
<CustomField>
    <fullName>Event_Worthwhile__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If event was worthwhile for student recruitment, outreach and relationship building</inlineHelpText>
    <label>Event Worthwhile</label>
    <type>Checkbox</type>
</CustomField>