force-app/main/default/objects/Event__c/fields/EventProduct_Capacity_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>EventProduct_Capacity_Notification_Email__c</fullName>
    <description>This is controlling the event product capacity notification email process</description>
    <inlineHelpText>Please select &apos;On&apos; for event product capacity notification email receive</inlineHelpText>
    <label>EventProduct Capacity Notification Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Settings</valueSetName>
    </valueSet>
</CustomField>