force-app/main/default/objects/Event__c/fields/External_Speakers_Budget__c.field-meta.xml
<CustomField>
    <fullName>External_Speakers_Budget__c</fullName>
    <label>External Speakers Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>