force-app/main/default/objects/Event__c/fields/Faculty__c.field-meta.xml
<CustomField>
    <fullName>Faculty__c</fullName>
    <description>The faculty responsible for the event</description>
    <label>Faculty / Department</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Faculties</valueSetName>
    </valueSet>
</CustomField>