force-app/main/default/objects/Event__c/fields/Faculty_Department__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Department__c</fullName>
    <description>The Faculty / Department responsible for the event</description>
    <inlineHelpText>Please choose appropriate Faculty / Department information</inlineHelpText>
    <label>Faculty / Department</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Faculty_Department</valueSetName>
    </valueSet>
</CustomField>