force-app/main/default/objects/Event__c/fields/Final_Event_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Event_Registration_Date__c</fullName>
    <label>Final Web Event Registration Date</label>
    <type>Date</type>
</CustomField>