force-app/main/default/objects/Event__c/fields/Finance_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Required__c</fullName>
    <formula>Paid_Event_Products__c  &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Approval Required</label>
    <type>Checkbox</type>
</CustomField>