force-app/main/default/objects/Event__c/fields/GDPR_Statement_Used__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Statement_Used__c</fullName>
    <inlineHelpText>Each university business area has its own consent message / statement. The below consent capture fields will be auto populated further to the values in the custom settings. To change values contact the Salesforce Administrator.</inlineHelpText>
    <label>Consent Statement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consent 1</fullName>
            </value>
            <value>
                <fullName>Consent 2</fullName>
            </value>
            <value>
                <fullName>Alumni &amp; Advancement</fullName>
                <isActive>false</isActive>
                <label>Alumni &amp; Advancement</label>
            </value>
            <value>
                <fullName>Marketing (RAO)</fullName>
                <isActive>false</isActive>
                <label>Marketing (RAO)</label>
            </value>
            <value>
                <fullName>Marketing (Student Recruitment)</fullName>
                <isActive>false</isActive>
                <label>Marketing (Student Recruitment)</label>
            </value>
            <value>
                <fullName>R&amp;I / B2B</fullName>
                <isActive>false</isActive>
                <label>R&amp;I / B2B</label>
            </value>
            <value>
                <fullName>Student Recruitment &amp; RAO</fullName>
                <isActive>false</isActive>
                <label>Student Recruitment &amp; RAO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>