force-app/main/default/objects/Event__c/fields/Includes_BAL__c.field-meta.xml
<CustomField>
    <fullName>Includes_BAL__c</fullName>
    <description>If faculty pick list contains Faculty of Business and Law will be checked. For reporting purposes.</description>
    <formula>INCLUDES( Faculty__c, &quot;Faculty of Business and Law&quot;)</formula>
    <label>Includes BAL</label>
    <type>Checkbox</type>
</CustomField>