force-app/main/default/objects/Event__c/fields/Includes_CCI__c.field-meta.xml
<CustomField>
    <fullName>Includes_CCI__c</fullName>
    <description>If faculty pick list contains Faculty of Creative and Cultural Industries will be checked. For reporting purposes.</description>
    <formula>INCLUDES( Faculty__c, &quot;Faculty of Creative and Cultural Industries&quot;)</formula>
    <label>Includes CCI</label>
    <type>Checkbox</type>
</CustomField>