force-app/main/default/objects/Event__c/fields/Includes_HSS__c.field-meta.xml
<CustomField>
    <fullName>Includes_HSS__c</fullName>
    <description>If faculty pick list contains Faculty of Humanities and Social Sciences will be checked. For reporting purposes.</description>
    <formula>INCLUDES( Faculty__c, &quot;Faculty of Humanities and Social Sciences&quot;)</formula>
    <label>Includes HSS</label>
    <type>Checkbox</type>
</CustomField>