force-app/main/default/objects/Event__c/fields/Includes_SAH__c.field-meta.xml
<CustomField>
    <fullName>Includes_SAH__c</fullName>
    <description>If faculty pick list contains Faculty of Science and Health will be checked. For reporting purposes.</description>
    <formula>INCLUDES( Faculty__c, &quot;Faculty of Science and Health&quot;)</formula>
    <label>Includes SAH</label>
    <type>Checkbox</type>
</CustomField>