force-app/main/default/objects/Event__c/fields/Includes_TEC__c.field-meta.xml
<CustomField>
    <fullName>Includes_TEC__c</fullName>
    <description>If faculty pick list contains Faculty of Technology will be checked. For reporting purposes.</description>
    <formula>INCLUDES( Faculty__c, &quot;Faculty of Technology&quot;)</formula>
    <label>Includes TEC</label>
    <type>Checkbox</type>
</CustomField>