force-app/main/default/objects/Event__c/fields/Invited__c.field-meta.xml
<CustomField>
    <fullName>Invited__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Invited</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>