force-app/main/default/objects/Event__c/fields/Is_Complex_Event__c.field-meta.xml
<CustomField>
    <fullName>Is_Complex_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Complex Event</label>
    <type>Checkbox</type>
</CustomField>