force-app/main/default/objects/Event__c/fields/Is_Private__c.field-meta.xml
<CustomField>
    <fullName>Is_Private__c</fullName>
    <defaultValue>false</defaultValue>
    <label>XIs Private</label>
    <type>Checkbox</type>
</CustomField>