force-app/main/default/objects/Event__c/fields/Level_of_Study__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Study__c</fullName>
    <label>Level of Study</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
            <value>
                <fullName>Postgraduate Taught</fullName>
            </value>
            <value>
                <fullName>Postgraduate Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>