force-app/main/default/objects/Event__c/fields/Manual_Event_Registration_Template__c.field-meta.xml
<CustomField>
    <fullName>Manual_Event_Registration_Template__c</fullName>
    <description>Email that sends when status of Event Registration is set to Invited</description>
    <inlineHelpText>Email that sends when status of Event Registration is set to Invited</inlineHelpText>
    <label>Default Invitation Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Settings</valueSetName>
    </valueSet>
</CustomField>