force-app/main/default/objects/Event__c/fields/Manual_or_Scheduled_Publishing__c.field-meta.xml
<CustomField>
    <fullName>Manual_or_Scheduled_Publishing__c</fullName>
    <inlineHelpText>Please use the Manual Publishing option. Scheduled publishing functionality is included however the LED are using Sitecore for Event Listings.</inlineHelpText>
    <label>Manual or Scheduled Publishing</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Event_Publishing__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual Publishing</fullName>
            </value>
            <value>
                <fullName>Scheduled Publishing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>