force-app/main/default/objects/Event__c/fields/Map_to_Venue__c.field-meta.xml
<CustomField>
    <fullName>Map_to_Venue__c</fullName>
    <formula>HYPERLINK(&quot;http://maps.google.com/maps?q=&quot;+ Venue_Street_Address_1__c + &quot;, &quot; + Venue_City__c + &quot;, &quot; + Venue_State__c + &quot; &quot; +  Venue_Postal_Code__c + &quot; &quot; +  Venue_Country__c , &quot;Google Map&quot;, &quot;_blank&quot;)</formula>
    <label>Map to Venue</label>
    <type>Text</type>
</CustomField>