force-app/main/default/objects/Event__c/fields/Maximum_Venue_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Venue_Capacity__c</fullName>
    <formula>Venue__r.Maximum_Venue_Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maximum Venue Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>