force-app/main/default/objects/Event__c/fields/Names_of_UoP_Staff_Attending_Event__c.field-meta.xml
<CustomField>
    <fullName>Names_of_UoP_Staff_Attending_Event__c</fullName>
    <label>Names of  LED Staff Attending Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>