force-app/main/default/objects/Event__c/fields/No_Campaign_Members__c.field-meta.xml
<CustomField>
    <fullName>No_Campaign_Members__c</fullName>
    <inlineHelpText>Total number of Campaign Members related to Campaign.</inlineHelpText>
    <label>No Campaign Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>