force-app/main/default/objects/Event__c/fields/No_Event_Registrations_ex_Guest__c.field-meta.xml
<CustomField>
    <fullName>No_Event_Registrations_ex_Guest__c</fullName>
    <inlineHelpText>Total number of Event Registrations Excluding Guest type.</inlineHelpText>
    <label>No Event Registrations (ex Guest)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>