force-app/main/default/objects/Event__c/fields/Non_Attended_Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>Non_Attended_Survey_URL__c</fullName>
    <description>The survey URL for those that registered but did not attend the event</description>
    <label>Non-Attended Survey URL</label>
    <type>Url</type>
</CustomField>