force-app/main/default/objects/Event__c/fields/Number_of_interactions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_interactions__c</fullName>
    <description>The number of students spoken to at the event</description>
    <inlineHelpText>The number of students spoken to at the event</inlineHelpText>
    <label>Number of interactions</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>