force-app/main/default/objects/Event__c/fields/Object_for_New_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Object_for_New_Attendees__c</fullName>
    <label>Object for New Attendees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create New Person Accounts</fullName>
            </value>
            <value>
                <fullName>Create New Leads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>