force-app/main/default/objects/Event__c/fields/Order_Address_Fields_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Order_Address_Fields_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to make address fields mandatory during the event registration</description>
    <inlineHelpText>Check this field if the address fields need to be mandatory during the event registration</inlineHelpText>
    <label>Order Address Fields Mandatory</label>
    <type>Checkbox</type>
</CustomField>