force-app/main/default/objects/Event__c/fields/Paid_Event_Products__c.field-meta.xml
<CustomField>
    <fullName>Paid_Event_Products__c</fullName>
    <label>Paid Event Products</label>
    <summaryFilterItems>
        <field>Event_Product__c.Event_Product_Price__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Product__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>