force-app/main/default/objects/Event__c/fields/Post_Event_Approval_Email__c.field-meta.xml
<CustomField>
    <fullName>Post_Event_Approval_Email__c</fullName>
    <description>This is controlling the post event approval email process</description>
    <inlineHelpText>Please select &apos;On&apos; for post event approval email receive</inlineHelpText>
    <label>Post Event Approval Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Settings</valueSetName>
    </valueSet>
</CustomField>