force-app/main/default/objects/Event__c/fields/Post_Event_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Post_Event_Approval_Status__c</fullName>
    <description>Post Event Approval status</description>
    <inlineHelpText>Post Event Approval status</inlineHelpText>
    <label>Post Event Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approval Required</fullName>
                <isActive>false</isActive>
                <label>Approval Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>