force-app/main/default/objects/Event__c/fields/Post_Web_Order_Action__c.field-meta.xml
<CustomField>
    <fullName>Post_Web_Order_Action__c</fullName>
    <label>Post Web Order Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Confirmation Screen</fullName>
                <default>true</default>
                <label>Order Confirmation Screen</label>
            </value>
            <value>
                <fullName>Redirect to URL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>