force-app/main/default/objects/Event__c/fields/Primary_Vendor_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Vendor_Contact_Phone__c</fullName>
    <formula>Primary_Vendor_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>