force-app/main/default/objects/Event__c/fields/Prospectuses_distributed__c.field-meta.xml
<CustomField>
    <fullName>Prospectuses_distributed__c</fullName>
    <description>The number of prospectuses distributed</description>
    <label>Prospectuses distributed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>