force-app/main/default/objects/Event__c/fields/Public_Event_Registration_URL__c.field-meta.xml
<CustomField>
    <fullName>Public_Event_Registration_URL__c</fullName>
    <description>URL for Site core Event Registration for UOP Web Team.</description>
    <inlineHelpText>URL for Site core Event Registration for UOP Web Team.</inlineHelpText>
    <label>Public Event Registration URL</label>
    <type>Url</type>
</CustomField>