force-app/main/default/objects/Event__c/fields/RAO_Attended_From_Booked__c.field-meta.xml
<CustomField>
    <fullName>RAO_Attended_From_Booked__c</fullName>
    <formula>RAO_Number_Attended__c / RAO_Number_Booked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RAO % Attended From Booked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>