force-app/main/default/objects/Event__c/fields/RAO_Event_Attendace__c.field-meta.xml
<CustomField>
    <fullName>RAO_Event_Attendace__c</fullName>
    <description>the number of attendees who attended the event</description>
    <label>RAO Number Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>