force-app/main/default/objects/Event__c/fields/RAO_Number_Attended__c.field-meta.xml
<CustomField>
    <fullName>RAO_Number_Attended__c</fullName>
    <inlineHelpText>This field totals the number attended on the Event Registrations</inlineHelpText>
    <label>RAO Number Attended</label>
    <summarizedField>Event_Registration__c.RAO_Number_Attended__c</summarizedField>
    <summaryForeignKey>Event_Registration__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>