force-app/main/default/objects/Event__c/fields/RAO_Number_Booked__c.field-meta.xml
<CustomField>
    <fullName>RAO_Number_Booked__c</fullName>
    <label>RAO Number Booked</label>
    <summarizedField>Event_Registration__c.RAO_Number_Booked__c</summarizedField>
    <summaryForeignKey>Event_Registration__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>