force-app/main/default/objects/Event__c/fields/RAO_Unique_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>RAO_Unique_Event_Id__c</fullName>
    <description>External Id of the migrated RAO Events</description>
    <externalId>true</externalId>
    <label>RAO Unique Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>