force-app/main/default/objects/Event__c/fields/Record_Type_for_New_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_for_New_Attendees__c</fullName>
    <label>Record Type for New Attendees</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Object_for_New_Attendees__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LED_Contact</fullName>
                <label>LED Contact</label>
            </value>
            <value>
                <fullName>PersonAccount</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
                <isActive>false</isActive>
                <label>Employer</label>
            </value>
            <value>
                <fullName>Influencer</fullName>
                <isActive>false</isActive>
                <label>Influencer</label>
            </value>
            <value>
                <fullName>Person Account</fullName>
                <isActive>false</isActive>
                <label>Person Account</label>
            </value>
            <value>
                <fullName>Student</fullName>
                <isActive>false</isActive>
                <label>Student</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>