force-app/main/default/objects/Event__c/fields/Refund_Requested_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Refund_Requested_for_Cancellation__c</fullName>
    <description>This is controlling the refund requested for cancellation email process</description>
    <inlineHelpText>Please select &apos;On&apos; for a refund requested for cancellation email receive</inlineHelpText>
    <label>Refund Requested for Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Settings</valueSetName>
    </valueSet>
</CustomField>