force-app/main/default/objects/Event__c/fields/Registered_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Registered_Attendees__c</fullName>
    <inlineHelpText>Running total of Event Registrations for this Event</inlineHelpText>
    <label>Registered</label>
    <summaryFilterItems>
        <field>Event_Registration__c.Event_Registration_Status__c</field>
        <operation>equals</operation>
        <value>Registered</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Registration__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>