force-app/main/default/objects/Event__c/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <inlineHelpText>This field will show as ‘Closed’ until all event set up activities have been undertaken &amp; the event status has been moved to ‘Activation’.Once moved to Activation the User can change the status manually to ‘Open’. After this field updates are automatic.</inlineHelpText>
    <label>Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Waiting List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>