force-app/main/default/objects/Event__c/fields/Request_For_Finance_Approval__c.field-meta.xml
<CustomField>
    <fullName>Request_For_Finance_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to submit finance approval</description>
    <inlineHelpText>Please check if finance approval is needed</inlineHelpText>
    <label>Request For Finance Approval</label>
    <type>Checkbox</type>
</CustomField>